# VRCX-0

./: .gitignore  CLA.md  CONTRIBUTING.md  Cargo.toml  README.ja-JP.md  README.ko-KR.md  README.md  README.zh-CN.md  README.zh-Hant.md  coverage.json  package-lock.json  package.json  tsconfig.typecheck.json  vite.config.js  vite.config.ts  vitest.config.ts
.github/: FUNDING.yml  changelog-template.md  dependabot.yml
.github/workflows/: badge-downloads.yml  build.yml  cla.yml  package-preview.yml  package-theme-devkit.yml  release.yml  unit-test.yml
build-scripts/: create-tauri-updater-manifest.js  generate-combined-coverage-badge.mjs  generate-combined-coverage-badge.test.mjs  prepare-release-version.js
crates/application/: Cargo.toml
crates/core/: Cargo.toml
crates/headless/: Cargo.toml
crates/host/: Cargo.toml
crates/integrations/: Cargo.toml
crates/mcp/: Cargo.toml
crates/media/: Cargo.toml
crates/persistence/: Cargo.toml
crates/runtime-host/: Cargo.toml
crates/vrchat-client/: Cargo.toml
crates/vrchat-client/src/: cookies.rs  image_fetcher.rs  realtime.rs  web_client.rs
scripts/: extract-overlay-locales.mjs  generate-native-locales.mjs
signatures/version1/: cla.json
src/: App.vue  main.js  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  bindings_export.rs  bootstrap.rs  lib.rs  macos_menu.rs  state.rs
src/app/: RouteErrorBoundary.test.ts  RouteErrorBoundary.tsx  globals.d.ts  router.jsx  router.tsx  routes.jsx  routes.tsx
src/components/: Location.jsx  Location.tsx  LocationWorld.jsx
src/lib/: avatarPlatform.js  dateTime.test.ts  dateTime.ts  entityMedia.js  entityQueryCache.js  fileAnalysis.js  fileAnalysis.ts  queryClient.js  useTodayDate.js
src/localization/: cs.json  en.json  es.json  fr.json  hu.json  index.js  ja.json  ko.json  locales.test.ts  pl.json  pt.json  ru.json  th.json  vi.json  zh-CN.json  zh-TW.json
src/repositories/: avatarProfileRepository.js  communityThemeRepository.ts  configKeys.ts  configRepository.js  configRepository.ts  databaseMaintenanceRepository.ts  feedPersistenceRepository.ts  friendLogRepository.js  gameLogPersistenceRepository.ts  groupProfileRepository.js  instanceRepository.js  mediaApiRepository.js  mediaApiRepository.ts  mediaFileRepository.js  mediaRepository.js  mediaRepository.ts  mutualGraphRepository.ts  myAvatarRepository.js  notificationRepository.js  sqliteRepository.js  toolsRepository.js  toolsRepository.ts  vrchatFavoriteRepository.js  vrchatFriendRepository.ts  vrchatMediaRepository.ts  vrchatModerationRepository.js  vrchatRequest.js  vrchatRequest.test.ts  vrchatRequest.ts  vrchatSearchRepository.js  webRepository.ts  worldProfileRepository.js  worldProfileRepository.test.ts  worldProfileRepository.ts
src/services/: activityCacheService.js  appearanceConflictCoordinator.ts  authAutoLoginService.js  authAutoLoginService.test.ts  authAutoLoginService.ts  authAutoLoginState.ts  authExecutionService.js  authExecutionService.test.ts  authExecutionService.ts  authSessionRecoveryService.ts  avatarWearTimeService.js  backendEventService.js  backgroundMaintenanceService.js  backgroundMaintenanceService.test.ts  backgroundMaintenanceService.ts  changelogService.test.ts  changelogService.ts  communityThemeService.test.ts  communityThemeService.ts  databaseUpgradeService.js  databaseUpgradeService.test.ts  databaseUpgradeService.ts  dialogService.js  directAccessService.js  discordPresenceService.js  domainIngestionService.test.ts  errorLogService.js  (+56 more)
(+990 files in other folders)
