[workspace]
members = [
    "src-tauri",
    "crates/i18n",
    "crates/core",
    "crates/persistence",
    "crates/integrations",
    "crates/vrchat-client",
    "crates/vr-overlay",
    "crates/host",
    "crates/media",
    "crates/application",
    "crates/runtime-host",
    "crates/headless",
    "crates/mcp",
    "crates/harness"
]
default-members = [
    "src-tauri",
    "crates/i18n",
    "crates/core",
    "crates/persistence",
    "crates/integrations",
    "crates/vrchat-client",
    "crates/vr-overlay",
    "crates/host",
    "crates/media",
    "crates/application",
    "crates/runtime-host",
    "crates/headless",
    "crates/mcp",
    "crates/harness"
]
resolver = "2"

[workspace.dependencies]
base64 = "0.22"
chrono = "0.4"
dirs = "6"
image = "0.25"
iana-time-zone = "0.1"
percent-encoding = "2"
reqwest = "0.13"
regex = "1"
rusqlite = "0.40"
serde = "1"
serde_json = "1"
specta = { version = "=2.0.0-rc.22", features = [
    "derive",
    "serde_json",
    "chrono"
] }
sys-locale = "0.3"
thiserror = "2"
tokio = "1"
tokio-util = "0.7"
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
