[package]
name = "vrcx-0-vrchat-client"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { workspace = true }
percent-encoding = { workspace = true }
reqwest = { workspace = true, features = [
    "cookies",
    "gzip",
    "brotli",
    "deflate",
    "multipart",
    "socks"
] }
reqwest_cookie_store = "0.10"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
url = { workspace = true }
vrcx-0-core = { path = "../core" }
