[package]
name = "vrcx-0-vrchat-client"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { workspace = true }
percent-encoding = { workspace = true }
reqwest = { workspace = true, features = [
    "cookies",
    "gzip",
    "brotli",
    "deflate",
    "multipart",
    "socks"
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
socket2 = "0.6"
specta.workspace = true
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
tracing = { workspace = true }
url = { workspace = true }
vrcx-0-core = { path = "../core" }
cookie_store = "0.22.1"
